<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_desc">Find your way back to a previously visited location using GPS coordinates.</string>
    <!-- Crouton messages -->
    <string name="inaccurate_location">Your current location is inaccurate</string>
    <string name="notice_no_dest">Store your location to set a destination</string>
    <string name="inaccurate_direction">Start moving to get an accurate direction to your destination</string>
    <string name="notice_destination_reached">You are at your destination</string>
    <string name="notice_location_permission_required">Allow access to this device\'s location to enable location updates</string>
    <string name="notice_location_no_permission">Location updates are turned off: Permission denied</string>
    <string name="notice_location_permission_granted">Permission granted for location updates</string>
    <!-- Strings related to Main activity -->
    <string name="current_speed">Current speed</string>
    <string name="speed_kph">km/h</string>
    <string name="current_bearing">Current bearing</string>
    <string name="distance">Distance</string>
    <string name="distance_m">m</string>
    <string name="distance_km">km</string>
    <string name="height_difference">Height difference</string>
    <string name="direction">Direction</string>
    <string name="northeast_unit">NE</string>
    <string name="southeast_unit">SE</string>
    <string name="southwest_unit">SW</string>
    <string name="northwest_unit">NW</string>
    <string name="location_updated">Location updated</string>
    <string name="inaccurate">Inaccurate</string>
    <string name="destination_reached">At destination</string>
    <string name="no_destination">No destination set</string>
    <string name="unknown">Unknown</string>
    <string name="refresh">Refresh</string>
    <!-- Strings related to Storing a location -->
    <string name="dialog_store_location_name">Enter a name for your current location:</string>
    <string name="dialog_enter_location">Enter a name and GPS coordinates for your location:</string>
    <string name="dialog_rename_destination">Enter a new name for your destination:</string>
    <string name="location_name">Location name</string>
    <string name="location_latitude">Location latitude</string>
    <string name="location_longitude">Location longitude</string>
    <string name="cancel">Cancel</string>
    <string name="store_location">Store Location</string>
    <string name="enter_location">Enter destination manually</string>
    <string name="rename_destination">Rename destination</string>
    <string name="store_location_disabled">Unable to store location if there is no current location</string>
    <string name="enter_location_invalid_latitude">Latitude is outside the valid range [-90°,90°]</string>
    <string name="enter_location_invalid_longitude">Longitude is outside the valid range [-180°,180°]</string>
    <string name="rename_destination_disabled">Unable to rename destination, store a location first</string>
    <string name="location_stored">Location stored</string>
    <string name="location_name_stored">Location \'%s\' stored</string>
    <string name="destination_renamed">Destination renamed</string>
    <string name="no_location_name">Location name was not specified</string>
    <!-- Strings related to Details activity -->
    <string name="menu_details">Location details</string>
    <string name="activity_details">Details</string>
    <string name="location_provider">Location Provider</string>
    <string name="name">Name</string>
    <string name="provider">Provider</string>
    <string name="loc_provider_network">Network (Cell phone/Wi-Fi)</string>
    <string name="loc_provider_gps">GPS</string>
    <string name="provider_no_support">Provider is not supported.</string>
    <string name="curr_location">Current (last known) location</string>
    <string name="latitude">Latitude</string>
    <string name="latitude_north_unit">N</string>
    <string name="latitude_south_unit">S</string>
    <string name="longitude">Longitude</string>
    <string name="longitude_east_unit">E</string>
    <string name="longitude_west_unit">W</string>
    <string name="altitude">Altitude</string>
    <string name="speed">Speed</string>
    <string name="bearing">Bearing</string>
    <string name="sensor_bearing_offset">Sensor based bearing offset</string>
    <string name="travel_direction">Travel direction</string>
    <string name="travel_direction_forward">Forward</string>
    <string name="travel_direction_backwards">Backwards</string>
    <string name="accuracy">Accuracy</string>
    <string name="timestamp">Timestamp</string>
    <string name="destination">Destination</string>
    <string name="to_dest">To Destination</string>
    <string name="direction_relative">relative to current heading</string>
    <string name="raw">Unformatted</string>
    <string name="none">None</string>
    <string name="notset">Not set</string>
    <string name="loc_updated_recent">Location recently updated.</string>
    <string name="loc_updated_not_recent">Location NOT recently updated.</string>
    <!-- Strings related to Settings -->
    <string name="settings">Settings</string>
    <!-- General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_header_loc_update">Location Updates</string>
    <string name="pref_loc_update_dist">Distance based updates</string>
    <string name="pref_loc_update_time">Time based updates</string>
    <string name="pref_enable_sensors">Use available sensors</string>
    <string name="pref_geo_orientation_sensor">Default orientation sensor</string>
    <string name="sensors_enabled">Enabled: Quicker updates and more accurate bearing</string>
    <string name="sensors_disabled">Disabled: Saves power</string>
    <string name="disabled">Disabled</string>
    <plurals name="distance_meter">
        <item quantity="one">%d metre</item>
        <item quantity="other">%d metres</item>
    </plurals>
    <plurals name="time_seconds">
        <item quantity="one">%d second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
    <plurals name="time_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string-array name="pref_geo_orientation_sensor_titles">
        <item>Automatic</item>
        <item>Raw sensors (experimental)</item>
        <item>Calculated orientation sensor</item>
    </string-array>
    <!-- Strings related to About activity -->
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="build_time">Built on %s.</string>
    <string name="app_website">Visit the &lt;a href="%1$s"&gt;website&lt;/a&gt; for more info.</string>
    <string name="copyright">Copyright</string>
    <string name="license">This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    any later version.\n
    \n
    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.\n
    \n
    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <a href="http://www.gnu.org/licenses/">www.gnu.org/licenses</a>.</string>
</resources>