<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/settings"/>
    <item
        android:id="@+id/menu_storelocation"
        android:orderInCategory="110"
        android:showAsAction="ifRoom"
        android:title="@string/store_location"/>
    <item
        android:id="@+id/menu_refresh"
        android:onClick="refresh"
        android:orderInCategory="130"
        android:showAsAction="always"
        android:icon="@drawable/ic_menu_refresh"
        android:title="@string/refresh" />
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="105"
        android:showAsAction="never"
        android:title="@string/about" />

</menu>
