<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".DisplayAboutActivity" >

    <TextView
        android:id="@+id/textview_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/version" />

    <TextView
        android:id="@+id/textview_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/app_desc" />

    <TextView
        android:id="@+id/textview_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/app_website" />

    <TextView
        android:id="@+id/textview_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/copyright" />

    <ScrollView
        android:id="@+id/scrollview_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:padding="2dp" >

        <TextView
            android:id="@+id/textview_license"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/license" />
    </ScrollView>

</LinearLayout>