<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
	<item
		android:id="@+id/menu_storelocation"
		android:onClick="storeLocation"
		android:orderInCategory="110"
		android:showAsAction="always"
		android:title="@string/store_location"/>
	<item
		android:id="@+id/menu_refresh"
		android:onClick="refresh"
		android:orderInCategory="120"
		android:showAsAction="always"
		android:title="@string/refresh"/>
	<item
        android:id="@+id/menu_about"
        android:orderInCategory="130"
        android:showAsAction="ifRoom"
        android:onClick="displayAbout"
        android:title="@string/about" />

</menu>