<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="10dp" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView_toDestDist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown"
            style="@style/captionValue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            style="@style/captionDescription" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="2dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView_toDestDir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown"
            style="@style/captionValue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direction"
            style="@style/captionDescription" />

    </LinearLayout>
</LinearLayout>