<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingRight="10dp"
    android:paddingLeft="0dp"
    android:paddingStart="0dp"
    android:paddingEnd="10dp" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView_currSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown"
            android:layout_gravity="end"
            style="@style/captionValue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_speed"
            android:layout_gravity="end"
            style="@style/captionDescription" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="2dp"
        android:layout_gravity="end"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView_currBearing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown"
            android:layout_gravity="end"
            style="@style/captionValue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_bearing"
            android:layout_gravity="end"
            style="@style/captionDescription" />
    </LinearLayout>
</LinearLayout>